--- a/CSS/estilos.css
+++ b/CSS/estilos.css
@@ -209,6 +209,76 @@ h1, h2, h3{
     color: var(--blanco);
 }
 
+/* SLIDER -------------------------------------------- */
+
+.wrapper {
+    max-width: 1200px;
+    position: relative;
+}
+
+.wrapper i {
+    top: 50%;
+    height: 45px;
+    width: 45px;
+    cursor: pointer;
+    position: absolute;
+    font-size: 1.8rem;
+    text-align: center;
+    line-height: 46px;
+    background-color: #fff;
+    border-radius: 50%;
+    transform: translateY(-50%);
+}
+
+.wrapper i:first-child {
+    left: -23px;
+    display: none;
+}
+
+.wrapper i:last-child {
+    right: -23px;
+}
+
+.wrapper .carrusel {
+    white-space: nowrap;
+    font-size: 0px;
+    cursor: pointer;
+    overflow: hidden;
+    scroll-behavior: smooth;
+}
+
+.carrusel .dragging {
+    cursor: grab;
+    scroll-behavior: auto;    
+}
+
+.carrusel .dragging img {
+    pointer-events: none;
+}
+
+.carrusel img {
+    /* height: 360px; */
+    object-fit: cover;
+    margin-left: 10px;
+    width: calc(100% / 3);
+}
+
+.carrusel img:first-child {
+    margin-left: 0px;
+}
+
+@media screen and (max-width: 900px) {
+    .carrusel img {
+        width: calc(100% / 2);
+    }    
+}
+
+@media screen and (max-width: 550px) {
+    .carrusel img {
+        width: 100%;
+    }    
+}
+
 /* NUMEROS -----------------------------------------*/
 
 .estadisticas{
