--- a/CSS/estilos.css
+++ b/CSS/estilos.css
@@ -28,6 +28,7 @@ html{
 
 body{
     font-size: 16px; /* 1 rem = 10px*/
+    font-family: 'Work Sans', sans-serif;    
     /*background-image: linear-gradient(to top, var(--oldRose), var(--blanco) 100%);*/
 }
 
@@ -225,7 +226,7 @@ h1, h2, h3{
     font-size: 1.8rem;
     text-align: center;
     line-height: 46px;
-    background-color: #fff;
+    background-color: var(--seaShell);
     border-radius: 50%;
     transform: translateY(-50%);
 }
