--- a/CSS/slider.css
+++ b/CSS/slider.css
@@ -12,7 +12,7 @@
     font-size: 1.8rem;
     text-align: center;
     line-height: 46px;
-    background-color: #fff;
+    background-color: var(--seaShell);
     border-radius: 50%;
     transform: translateY(-50%);
 }
