--- a/CSS/menuadmin.css
+++ b/CSS/menuadmin.css
@@ -153,3 +153,48 @@ nav {
 .br-3.animado {
     transform: rotate(45deg) translate(-10px, -8px);
 }
+
+
+/* Formularios */
+
+.captura {
+    margin: 30px;
+    background-color: white;
+    padding: 20px;
+    border-radius: 10px;
+}
+
+form {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+}
+
+@media (min-width: 768px) {
+    form {
+        width: 30%;
+    }
+}
+
+form label {
+    font-size: 20px;    
+}
+
+form input, form select, form button {
+    height: 35px;
+    border: solid 1px black;
+    border-radius: 5px;
+    margin-bottom: 20px; 
+    background-color: #e6e6e6;   
+    font-size: 18px;
+    font-family: 'Work Sans', sans-serif;
+    padding-left: 10px;
+}
+
+form button {
+    background-color: transparent;
+}
+
+form button:hover {
+    background-color: var(--champagnePink);
+}
