--- a/CSS/menuadmin.css
+++ b/CSS/menuadmin.css
@@ -172,7 +172,7 @@ form {
 
 @media (min-width: 768px) {
     form {
-        width: 30%;
+        width: 95%;
     }
 }
 
@@ -197,4 +197,11 @@ form button {
 
 form button:hover {
     background-color: var(--champagnePink);
+}
+
+@media (min-width: 768px) {
+    .captura .contenedor {
+        display: flex;
+        flex-direction: row;
+    }   
 }
