--- a/CSS/menuadmin.css
+++ b/CSS/menuadmin.css
@@ -88,7 +88,7 @@ nav {
 
 @media (max-width: 768px) {
     body{
-        overflow: hidden;        
+        /* overflow: hidden;         */
     }
 
     .logo {
@@ -164,16 +164,28 @@ nav {
     border-radius: 10px;
 }
 
+.captura h2 {
+    padding-bottom: 30px;
+}
+
 form {
     display: flex;
     flex-direction: column;
     width: 100%;
 }
 
-@media (min-width: 768px) {
+.contenedor-de-tabla {
+    display: none;
+}
+
+@media (min-width: 1020px) {
+    .contenedor-de-tabla {
+        display: block;
+    }
+
     form {
         width: 95%;
-    }
+    }   
 }
 
 form label {
@@ -199,7 +211,7 @@ form button:hover {
     background-color: var(--champagnePink);
 }
 
-@media (min-width: 768px) {
+@media (min-width: 1020px) {
     .captura .contenedor {
         display: flex;
         flex-direction: row;
