--- a/CSS/menuadmin.css
+++ b/CSS/menuadmin.css
@@ -233,3 +233,39 @@ form button:hover {
     padding: 25px;
     width: 100%;
 }
+
+/* EDITAR */
+
+.editar-form {
+    background-color: white;
+    margin: 50px;
+    padding: 30px 70px;
+    border-radius: 30px;
+}
+
+.editar-form form {
+    width: 100%;
+}
+
+.editar-form form button {
+    grid-column: 1 / 3;
+    width: 30%;
+    margin-left: 35%;
+    margin-top: 30px;
+}
+
+@media (min-width: 768px) {
+    .editar-form form {
+        width: 100%;
+        display: grid;
+        grid-template-columns: 30% 70%;
+        column-gap: 30px;
+    }
+    
+    .editar-form form button {
+        grid-column: 1 / 3;
+        width: 30%;
+        margin-left: 35%;
+        margin-top: 30px;
+    }
+}
